--- a/static/deps/css/style.css
+++ b/static/deps/css/style.css
@@ -3,9 +3,10 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
     background-size: cover;
-    background-color:  #A9B9C8 !important;
+    /*background-color:  #A9B9C8 !important;*/
+    background: linear-gradient(135deg, #2c3e50, #34495e);
 }
 
 header {
@@ -66,6 +67,13 @@ footer{
 }
 .nav-item.dropdown{
     text-align: end;
+}
+.form_exchange form{
+    display: flex;
+    flex-direction: row;
+}
+.container ul li:nth-child(3):hover, .hover-blue:hover{
+    color: #00BAE3 !important;
 }
 
 .list_header {
@@ -225,7 +233,6 @@ button[type="submit"] {
   top: 0;
   left: 0;
   width: 72%;
-  /*height: 100%;*/
   background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
   align-items: center;
@@ -270,7 +277,7 @@ button[type="submit"] {
     max-width: 250px;
 }
 .index{
-    width: 16px;
+    width: 30px;
 }
 #customCoinForm div div{
     margin: 12px 0 !important;
@@ -285,18 +292,28 @@ button[type="submit"] {
     height: 45px ;
 }
 
-#openModalBtn, .log-in-btn, #openModalBtnAdmin, #editCustomCoinBtn{
+#openModalBtn, .log-in-btn, #openModalBtnAdmin, #editCustomCoinBtn, #editDefaultCoinBtn{
     background-color: #007BFF !important;
     width: 175px;
     height: 45px ;
     color: white;
 }
 #openModalBtn:hover, .log-in-btn:hover, #openModalBtnAdmin:hover,
-#editCustomCoinBtn:hover{
+#editCustomCoinBtn:hover, #editDefaultCoinBtn:hover{
     color: var(--bs-btn-hover-color) !important;
     background-color: var(--bs-btn-hover-bg) !important;
     border-color: var(--bs-btn-hover-border-color) !important;
+
+
 }
+#closeModalBtn:hover{
+    background-color: rgba(58,0,10,0.85);
+    color: white;
+}
+#exchange-selector{
+    box-sizing: content-box;
+}
+
 @media (min-width: 992px) {
     .container {
         max-width: none !important;
