--- a/coins/templates/coins/coin.html
+++ b/coins/templates/coins/coin.html
@@ -26,8 +26,9 @@
                         {% endif %}
                     </div>
                     <div>
-                        <div class="coin_name">{{ coin.name|capfirst }}</div>
-                        <div>Price: $<span class="market_info_green">{{ coin_info.openPrice }}</span></div>
+{#                        <div class="coin_name" id="coin-name">{{ coin.name|capfirst }}</div>#}
+                        <div class="coin_name" id="coin-name">{{ coin.symbol }}</div>
+                        <div>Price: $<span class="market_info_green">{{ coin_info.openPrice|floatformat:4 }}</span></div>
                     </div>
                 </div>
 
@@ -35,22 +36,22 @@
                     <div class="market_container">
                         <div class="market-info-item"><b>Change</b></div>
                         {% if '-' not in coin_info.priceChangePercent %}
-                            <div class="market-info-item positive">{{ coin_info.priceChange }} (USDT)</div>
-                            <div class="market-info-item positive">{{ coin_info.priceChangePercent }} (%)</div>
+                            <div class="market-info-item positive">{{ coin_info.priceChange|floatformat:4 }} (USDT)</div>
+                            <div class="market-info-item positive">{{ coin_info.priceChangePercent|floatformat:4 }} (%)</div>
                         {% else %}
-                            <div class="market-info-item negative">{{ coin_info.priceChange }} (USDT)</div>
-                            <div class="market-info-item negative">{{ coin_info.priceChangePercent }} (%)</div>
+                            <div class="market-info-item negative">{{ coin_info.priceChange|floatformat:4 }} (USDT)</div>
+                            <div class="market-info-item negative">{{ coin_info.priceChangePercent|floatformat:4 }} (%)</div>
                         {% endif %}
                     </div>
                     <div class="market_container">
                         <div class="market-info-item"><b>Min/Max</b></div>
-                        <div class="market-info-item">{{ coin_info.highPrice }}</div>
-                        <div class="market-info-item">{{ coin_info.lowPrice }}</div>
+                        <div class="market-info-item">{{ coin_info.highPrice|floatformat:4 }}</div>
+                        <div class="market-info-item">{{ coin_info.lowPrice|floatformat:4 }}</div>
                     </div>
                     <div class="market_container">
                         <div class="market-info-item"><b>Volume</b></div>
-                        <div class="market-info-item">{{ coin_info.volume }} ({{ coin.symbol }})</div>
-                        <div class="market-info-item">{{ coin_info.quoteVolume }} (USDT)</div>
+                        <div class="market-info-item">{{ coin_info.volume|floatformat:4 }} ({{ coin.symbol }})</div>
+                        <div class="market-info-item">{{ coin_info.quoteVolume|floatformat:4 }} (USDT)</div>
                     </div>
                 </div>
             </div>
@@ -59,11 +60,8 @@
                 <div class="coin-actions">
                     {% if is_custom %}
                         <!-- Actions for custom coins -->
-                        <p>This is a custom coin.</p>
                         <button id="editCustomCoinBtn" class="btn btn-outline-success text-white">Edit Custom Coin</button>
-                    {% else %} {# default coin only for admin
-                        <!-- Actions for default coins -->
-                        <p>This is a default coin.</p>
+                    {% else %}
                         {% if is_admin_user %}
                             <button id="editDefaultCoinBtn" class="btn btn-outline-success text-white">Edit Default Coin</button>
                         {% else %}
@@ -71,6 +69,16 @@
                         {% endif %}
                     {% endif %}
                 </div>
+
+        <div class="form_exchange">
+            <form action="" method="get">
+                <select id="exchange-selector" name="exchange" class="form-select mr-2" required>
+                    <option value="MEXC" {% if request.GET.exchange == "MEXC" %}selected{% endif %}>MEXC</option>
+                    <option value="Binance" {% if request.GET.exchange == "Binance" %}selected{% endif %}>BINANCE</option>
+                </select>
+                <button type="submit" class="btn btn-primary" style="margin-left: 10px">Apply</button>
+            </form>
+        </div>
 
 {#        <button id="openModalBtn" class="btn btn-outline-success text-white">Edit Coin</button>#}
         <!-- Add coin -->
@@ -135,7 +143,7 @@
                             <i class="fas fa-check-circle"></i> Apply
                         </button>
                         <button type="submit" id="deleteCoin" class="btn btn-outline-danger">
-                            <i class="fas fa-trash-alt"></i> Delete
+                            <i class=""></i> Delete
                         </button>
                     </div>
                     <p id="statusMessage" style="display: none;text-align: center"></p>
@@ -174,6 +182,45 @@
                 <canvas id="chart" style="width: calc(100vw - 20px); margin: 0 auto"></canvas>
            </div>
         </div>
+
+        <h1 style="text-align: center; color: #334155;">Order Book Visualization</h1>
+        <div class="order-books-container">
+            <!-- Ордербук для першої біржі -->
+            <div class="order-book">
+                <h3 class="order-book-title">Exchange 1</h3>
+                <div class="order-section sellers">
+                    <h4 class="order-section-title">Sellers</h4>
+                    <ul class="order-list order-sellers" id="exchange1-sellers">
+                        <!-- Продавці будуть рендеритися тут -->
+                    </ul>
+                </div>
+                <div class="order-section buyers">
+                    <h4 class="order-section-title">Buyers</h4>
+                    <ul class="order-list order-buyers" id="exchange1-buyers">
+                        <!-- Покупці будуть рендеритися тут -->
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Ордербук для другої біржі -->
+            <div class="order-book">
+                <h3 class="order-book-title">Exchange 2</h3>
+                <div class="order-section sellers">
+                    <h4 class="order-section-title">Sellers</h4>
+                    <ul class="order-list order-sellers" id="exchange2-sellers">
+                        <!-- Продавці будуть рендеритися тут -->
+                    </ul>
+                </div>
+                <div class="order-section buyers">
+                    <h4 class="order-section-title">Buyers</h4>
+                    <ul class="order-list order-buyers" id="exchange2-buyers">
+                        <!-- Покупці будуть рендеритися тут -->
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 {% endblock %}
 
@@ -187,5 +234,7 @@
     <script src="{% static 'deps/js/chartjs-chart-financial.min.js' %}" type="text/javascript"></script>
 
     <script src="{% static 'deps/js/coin.js' %}"></script>
+    <script src="{% static 'deps/js/order-book.js' %}"></script>
+
 {% endblock %}
 
