--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
                         </a>
                     </li>
                     <li style="align-content: center; margin-right: 32px;font-size: 22px;">
-                        <a class="navbar-brand" href="{% url 'main:home' %}" >Crypto Viewer</a>
+                        <a class="navbar-brand" href="{% url 'main:home' %}" style="font-size: larger; font-style: italic;" >Crypto Viewer</a>
                     </li>
                     <li style="align-content: center; margin-right: 32px; font-size: 22px;">
                         <a class="navbar-brand" href="{% url "coinList:index" %}">Coin List</a>
@@ -67,20 +67,20 @@
                     <li style="align-content: center; right: 0; margin-left: auto;;font-size: 22px;">
                         {% if  user.is_authenticated %}
                             <div class=" dropdown d-flex justify-content-end">
-                                <a class="nav-link dropdown-toggle text-white"  role="button" data-bs-toggle="dropdown" aria-expanded="true">
+                                <a class="nav-link dropdown-toggle text-white hover-blue"  role="button" data-bs-toggle="dropdown" aria-expanded="true">
                                     Account
                                 </a>
                                 <ul class="dropdown-menu"  style="background-color:#3a3939; " >
 
                                     {% if user.is_admin or user.is_staff %}
-                                        <li><a class="dropdown-item text-white" href="{% url 'admin:index' %}">Admin panel</a></li>
+                                        <li><a class="dropdown-item text-white hover-blue" href="{% url 'admin:index' %}">Admin panel</a></li>
                                     {% endif %}
 
-                                    <li><a class="dropdown-item text-white" href="{% url 'user:profile' %}">Profile</a></li>
+                                    <li><a class="dropdown-item text-white hover-blue" href="{% url 'user:profile' %}">Profile</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                        <li><a class="dropdown-item text-white" href="{% url 'user:logout' %}">Log out</a></li>
+                                        <li><a class="dropdown-item text-white hover-blue" href="{% url 'user:logout' %}">Log out</a></li>
                                 </ul>
                             </div>
                         {% else %}
@@ -91,7 +91,13 @@
             
             </div>
         </header>
-
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
         {% include  "includes/notifications.html" %}
         {% block content %}
         {% endblock %}
