virst version release, commit before docker

--- a/coinList/templates/coinList/coins_list.html
+++ b/coinList/templates/coinList/coins_list.html
@@ -43,7 +43,7 @@
                     <div class="row" style="display: flex; flex-direction: column; justify-content: center; margin: 0 auto">
                         <div>
                             <select id="coin-market" name="market" class="form-select" required>
-                                <option value="" disabled selected>Select market</option>
+{#                                <option value="" disabled selected>Select market</option>#}
                                 <option value="MEXC">MEXC</option>
                                 <option value="BINANCE">BINANCE</option>
                             </select>
